[package]
name = "covenant"
version = "0.1.0"
edition = "2021"

[dependencies]
int-multistore = { path = "../int-multistore" }

anyhow = "1.0.86"
bytes = "1.6.0"
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
fs-err = { version = "2.11.0", features = ["tokio"] }
tokio-stream = "0.1.15"
#warp = { version = "0.3.7", features = ["compression"] }
fastrand = "2.1.0"
fs4 = { version = "0.8.4", features = ["tokio"] }
memmap2 = "0.9.4"
async-channel = "2.3.1"

digest = "0.10.7"
typenum = "1.17.0"
md5 = "0.7.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
blake2 = "0.10.6"
blake3 = "1.5.1"
