[package]
name = "seqstore"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = "1.9.1"
memmap2 = "0.9.4"
thiserror = "1.0.61"
varuint = "0.7.1"
indexmap = { version = "2.2.6", optional = true }
log = { version = "0.4.21", optional = true }

anyhow = { version = "1.0.86", optional = true }
arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
rand = { version = "0.8.5", optional = true }
simplelog = { version = "0.12.2", optional = true }
serde = { version = "1.0.203", optional = true }

[features]
default = ["debug_map", "tests"] # TEMP: This is only default for now
debug_map = ["dep:indexmap", "dep:log"]
tests = ["debug_map", "dep:anyhow", "dep:arbitrary", "dep:rand", "dep:simplelog"]
serde = ["dep:serde"]
